--- a/frontend/html/amazon.html
+++ b/frontend/html/amazon.html
@@ -45,7 +45,7 @@
 
       <a class="cart-link header-link" href="checkout.html">
         <img class="cart-icon" src="../images/icons/cart-icon.png">
-        <div class="cart-quantity">3</div>
+        <div class="cart-quantity">0</div>
         <div class="cart-text">Cart</div>
       </a>
     </div>
@@ -53,7 +53,9 @@
 
   <div class="main">
     <div class="products-grid">
-      <div class="product-container">
+
+
+      <!-- <div class="product-container">
         <div class="product-image-container">
           <img class="product-image" src="../images/products/athletic-cotton-socks-6-pairs.jpg">
         </div>
@@ -74,6 +76,7 @@
         </div>
 
         <div class="product-quantity-container">
+          <p class="quantityLabel">Quantity</p>
           <select>
             <option selected value="1">1</option>
             <option value="2">2</option>
@@ -99,6 +102,8 @@
           Add to Cart
         </button>
       </div>
+
+
 
       <div class="product-container">
         <div class="product-image-container">
@@ -185,16 +190,19 @@
         <div class="product-spacer"></div>
 
         <div class="added-to-cart">
-          <img src="images/icons/checkmark.png">
+          <img src="../images/icons/checkmark.png">
           Added
         </div>
 
         <button class="add-to-cart-button button-primary">
           Add to Cart
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
+
+  <script src="../../data/products.js"></script>
+  <script src="../script/amazon.js"></script>
 </body>
 
 </html>
