--- a/frontend/html/amazon.html
+++ b/frontend/html/amazon.html
@@ -56,9 +56,7 @@
     </div>
   </div>
 
-  <script src="../../data/products.js"></script>
-  <script src="../script/cart.js"></script>
-  <script src="../script/amazon.js"></script>
+  <script type="module" src="../script/amazon.js"></script>
 </body>
 
 </html>
