--- a/frontend/html/amazon.html
+++ b/frontend/html/amazon.html
@@ -45,7 +45,7 @@
 
       <a class="cart-link header-link" href="checkout.html">
         <img class="cart-icon" src="../images/icons/cart-icon.png">
-        <div class="cart-quantity">0</div>
+        <div class="cart-quantity"></div>
         <div class="cart-text">Cart</div>
       </a>
     </div>
@@ -55,7 +55,6 @@
     <div class="products-grid">
     </div>
   </div>
-
   <script type="module" src="../script/amazon.js"></script>
 </body>
 
