--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Checkout</title>
 
-    <!-- This code is needed for responsive design to work.
+<head>
+  <title>Checkout</title>
+
+  <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
       smaller screen sizes like a phone or a tablet). -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Load a font called Roboto from Google Fonts. -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- Load a font called Roboto from Google Fonts. -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- Here are the CSS files for this page. -->
-    <link rel="stylesheet" href="../styles/shared/general.css">
-    <link rel="stylesheet" href="../styles/pages/checkout/checkout-header.css">
-    <link rel="stylesheet" href="../styles/pages/checkout/checkout.css">
-  </head>
-  <body>
-    <div class="checkout-header">
-      <div class="header-content">
-        <div class="checkout-header-left-section">
-          <a href="amazon.html">
-            <img class="amazon-logo" src="../images/amazon-logo.png">
-            <img class="amazon-mobile-logo" src="../images/amazon-mobile-logo.png">
-          </a>
-        </div>
+  <!-- Here are the CSS files for this page. -->
+  <link rel="stylesheet" href="../styles/shared/general.css">
+  <link rel="stylesheet" href="../styles/pages/checkout/checkout-header.css">
+  <link rel="stylesheet" href="../styles/pages/checkout/checkout.css">
+</head>
 
-        <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
-        </div>
+<body>
+  <div class="checkout-header">
+    <div class="header-content">
+      <div class="checkout-header-left-section">
+        <a href="amazon.html">
+          <img class="amazon-logo" src="../images/amazon-logo.png">
+          <img class="amazon-mobile-logo" src="../images/amazon-mobile-logo.png">
+        </a>
+      </div>
 
-        <div class="checkout-header-right-section">
-          <img src="../images/icons/checkout-lock-icon.png">
-        </div>
+      <div class="checkout-header-middle-section js-checkout-header-middle-section">
+        <!-- Checkout (<a class="return-to-home-link" href="amazon.html">3 items</a>) -->
+      </div>
+
+      <div class="checkout-header-right-section">
+        <img src="../images/icons/checkout-lock-icon.png">
       </div>
     </div>
+  </div>
 
-    <div class="main">
-      <div class="page-title">Review your order</div>
+  <div class="main">
+    <div class="page-title">Review your order</div>
 
-      <div class="checkout-grid">
-        <div class="order-summary">
-          <div class="cart-item-container">
+    <div class="checkout-grid">
+      <div class="order-summary">
+        <!-- <div class="cart-item-container">
             <div class="delivery-date">
               Delivery date: Tuesday, June 21
             </div>
@@ -118,9 +119,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="cart-item-container">
+        <!-- <div class="cart-item-container">
             <div class="delivery-date">
               Delivery date: Wednesday, June 15
             </div>
@@ -192,10 +193,10 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+          </div> -->
+      </div>
 
-        <div class="payment-summary">
+      <!-- <div class="payment-summary">
           <div class="payment-summary-title">
             Order Summary
           </div>
@@ -228,8 +229,11 @@
           <button class="place-order-button button-primary">
             Place your order
           </button>
-        </div>
-      </div>
+        </div> -->
     </div>
-  </body>
+  </div>
+  
+  <script type="module" src="../script/checkout.js"></script>
+</body>
+
 </html>
