add money.js and fix input radio

--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -196,8 +196,8 @@
           </div> -->
       </div>
 
-      <!-- <div class="payment-summary">
-          <div class="payment-summary-title">
+      <div class="payment-summary">
+          <!-- <div class="payment-summary-title">
             Order Summary
           </div>
 
@@ -228,8 +228,8 @@
 
           <button class="place-order-button button-primary">
             Place your order
-          </button>
-        </div> -->
+          </button> -->
+        </div>
     </div>
   </div>
   
