Rename amazonSignIn.html to index.html and make index.html as root file

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/amazonSignIn.css">
+    <link rel="stylesheet" href="/frontend/styles/normalize.css">
+    <link rel="stylesheet" href="/frontend/styles/amazonSignIn.css">
     <title>Amazon Sign-In</title>
 </head>
 
 <body>
     <header>
         <div class="logoContainer">
-            <img src="../images/amazon-logo.png" alt="logo">
+            <img src="/frontend/images/amazon-logo.png" alt="logo">
         </div>
     </header>
     <main>
@@ -23,7 +23,7 @@
             <p class="inputLabel">Password</p>
             <div class="passwordContainer">
                 <input type="password" id="inputPassword">
-                <img src="../images/eye.png" alt="Show/Hide Password" id="togglePassword">
+                <img src="/frontend/images/eye.png" alt="Show/Hide Password" id="togglePassword">
             </div>
             <p class="warning">Invalid cridential</p>
             <button class="continueButton" id="continueButton">Continue</button>
@@ -32,7 +32,7 @@
             </p>
             <div class="dropDownLink">
                 <div class="dropdDown">
-                    <img src="../images/icons8-sort-down-10.png" class="dropDownIcon" alt="" id="dropDownIcon">
+                    <img src="frontend/images/icons8-sort-down-10.png" class="dropDownIcon" alt="" id="dropDownIcon">
                     <p class="needHelpDropDown" id="needHelpDropDown">Need Help?</p>
                 </div>
                 <div class="menuList">
@@ -62,7 +62,7 @@
         </div>
         <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
     </footer>
-    <script src="../script/amazonSignIn.js"></script>
+    <script src="frontend/script/amazonSignIn.js"></script>
 </body>
 
 </html>
