--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/styles/normalize.css">
-    <link rel="stylesheet" href="/frontend/styles/amazonSignIn.css">
+    <link rel="stylesheet" href="frontend/styles/normalize.css">
+    <link rel="stylesheet" href="frontend/styles/amazonSignIn.css">
     <title>Amazon Sign-In</title>
 </head>
 
 <body>
     <header>
         <div class="logoContainer">
-            <img src="/frontend/images/amazon-logo.png" alt="logo">
+            <img src="frontend/images/amazon-logo.png" alt="logo">
         </div>
     </header>
     <main>
@@ -23,7 +23,7 @@
             <p class="inputLabel">Password</p>
             <div class="passwordContainer">
                 <input type="password" id="inputPassword">
-                <img src="/frontend/images/eye.png" alt="Show/Hide Password" id="togglePassword">
+                <img src="frontend/images/eye.png" alt="Show/Hide Password" id="togglePassword">
             </div>
             <p class="warning">Invalid cridential</p>
             <button class="continueButton" id="continueButton">Continue</button>
