Break checkout into 2 separate files ordeySummary.js and paymentSummary.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input type="password" id="inputPassword">
                 <img src="frontend/images/eye.png" alt="Show/Hide Password" id="togglePassword">
             </div>
-            <p class="warning">Invalid cridential</p>
+            <p class="warning">Invalid credentials</p>
             <button class="continueButton" id="continueButton">Continue</button>
             <p class="conditionLabel">By continuing, you agree to Amazon's <span>Conditions of Use</span> and
                 <span>Privacy Notice</span>
