--- a/frontend/test jasmine/test.html
+++ b/frontend/test jasmine/test.html
@@ -14,16 +14,10 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  <!-- include source files here... -->
-  <!-- <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script> -->
-
-  <!-- include spec files here... -->
-  <!-- <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script> -->
 
   <!-- Test File -->
-  <script src="./spec/moneySpec.js" type="module"></script>
+  <script src="./spec/utils/moneySpec.js" type="module"></script>
+  <script src="./spec/cartSpec.js" type="module"></script>
 
 </head>
 
