Create a OOP version of cart

--- a/frontend/test jasmine/test.html
+++ b/frontend/test jasmine/test.html
@@ -16,7 +16,7 @@
 
 
   <!-- Test File -->
-  <script src="./spec/utils/moneySpec.js" type="module"></script>
+  <!-- <script src="./spec/utils/moneySpec.js" type="module"></script> -->
   <script src="./spec/cartSpec.js" type="module"></script>
 
 </head>
